# training-cod

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: trainee.py  trainer.py  training.py  training_session.py
app/database/: db.py
app/models/: trainee.py  trainer.py  training.py  training_session.py
app/service/: trainee.py  trainer.py  training.py  training_session.py
tests/: test_trainee.py  test_trainer.py  test_training.py  test_training_session.py
