[project]
name = "training-cod"
version = "0.2.0"
description = "A FastAPI project for managing trainers, trainees, and training sessions."
authors = ["Hamza Abdelhedi <abdelhedi.hamza@gmail.com>"]
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pymongo = "^4.2.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --maxfail=3 --disable-warnings"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.19.0"
